z-index FIX

--- a/src/components/Menu/styles/Menu.scss
+++ b/src/components/Menu/styles/Menu.scss
@@ -17,7 +17,7 @@
     transform: translateX(-100%);
     transition: transform .25s ease-in-out;
     width: 400px;
-    z-index: 99999;
+    z-index: 9997;
 
     &.mobile-visible {
       transform: translateX(0);
