--- a/src/static/global-styles/_inputs.scss
+++ b/src/static/global-styles/_inputs.scss
@@ -34,7 +34,7 @@
 /* stylelint-disable selector-class-pattern */
 .react-select {
   position: relative;
-  z-index: 9997;
+  z-index: 9996;
 
   .rs {
     &__control {
